--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>SKAhack/SparrowEmojiPlugin @ GitHub</title>
+  <title>SparrowEmojiPlugin @ GitHub</title>
 
   <style type="text/css">
     body {
@@ -49,13 +49,38 @@
       A SIMBL plugin. Add suport Emoji in Sparrow.app
     </div>
 
-    <h2>Authors</h2>
-<p>Hiroki Sato (@SKAhack)<br/><br/>      </p>
-<h2>Contact</h2>
-<p>Hiroki Sato (@SKAhack)<br/>      </p>
+    <h2>Support Emoji</h2>
+	<p>
+		<ul>
+			<li>iPhone Emoji</li>
+			<li>DoCoMo Emoji</li>
+			<li>KDDI Emoji</li>
+			<li>SoftBank Emoji</li>
+		</ul>
+	</p>
 
+    <h2>Support Version</h2>
+	<p>Sparrow Version 1.1 (674)</p>
+
+    <h2>Instructions</h2>
+	<p>
+		<ol>
+			<li>SIMBL install <a href="http://www.culater.net/software/SIMBL/SIMBL.php">here</a>.</li>
+			<li>Put SparrowEmojiPlugin.bundle into ~/Library/Application Support/SIMBL/Plugins/</li>
+		</ol>
+	</p>
 
     <h2>Download</h2>
+	<p>Latest compiled version(0.4.1) [<a href="https://github.com/downloads/SKAhack/SparrowEmojiPlugin/SparrowEmojiPlugin.zip">here</a>].</p>
+
+	<br/>
+	<br/>
+	<br/>
+
+    <h2>Author / Contact</h2>
+	<p>Hiroki Sato (@SKAhack)<br/> </p>
+
+    <h2>Source</h2>
     <p>
       You can download this project in either
       <a href="http://github.com/SKAhack/SparrowEmojiPlugin/zipball/master">zip</a> or
