--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       A SIMBL plugin. Add suport Emoji in Sparrow.app
     </div>
 
-    <h2>Support Emoji</h2>
+    <h2>Support Emoji(絵文字)</h2>
 	<p>
 		<ul>
 			<li>iPhone Emoji</li>
@@ -71,14 +71,11 @@
 	</p>
 
     <h2>Download</h2>
-	<p>Latest compiled version(0.4.1) [<a href="https://github.com/downloads/SKAhack/SparrowEmojiPlugin/SparrowEmojiPlugin.zip">here</a>].</p>
+	<p>Latest compiled version [<a href="https://github.com/downloads/SKAhack/SparrowEmojiPlugin/SparrowEmojiPlugin.zip">here</a>].</p>
 
 	<br/>
 	<br/>
 	<br/>
-
-    <h2>Author / Contact</h2>
-	<p>Hiroki Sato (@SKAhack)<br/> </p>
 
     <h2>Source</h2>
     <p>
@@ -90,6 +87,9 @@
       by running:
       <pre>$ git clone git://github.com/SKAhack/SparrowEmojiPlugin</pre>
     </p>
+
+    <h2>Author / Contact</h2>
+	<p>Hiroki Sato (@SKAhack)<br/> </p>
 
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/SKAhack/SparrowEmojiPlugin">SKAhack/SparrowEmojiPlugin</a>
